syntax = "proto3";
package tendermint.crypto.keys;

option go_package = "github.com/tendermint/tendermint/proto/tendermint/crypto/keys";

import "gogoproto/gogo.proto";

// PublicKey defines the keys available for use with Tendermint Validators
message PublicKey {
  option (gogoproto.compare) = true;
  option (gogoproto.equal)   = true;

  oneof sum {
    bytes ed25519 = 1;
  }
}

// PrivateKey defines the keys available for use with Tendermint Validators
// WARNING PrivateKey is used for internal purposes only
message PrivateKey {
  oneof sum {
    bytes ed25519 = 1;
  }
}
